Closed
Bug 95160
Opened 23 years ago
Closed 23 years ago
Gdk-CRITICAL errors reading news
Categories
(Core :: Graphics: ImageLib, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: mike, Assigned: pavlov)
References
Details
(Whiteboard: critical for 0.9.4)
Attachments
(2 files, 2 obsolete files)
6.44 KB,
patch
|
bryner
:
review+
pavlov
:
superreview+
pavlov
:
approval+
|
Details | Diff | Splinter Review |
12.71 KB,
patch
|
Details | Diff | Splinter Review |
Build ID 2001081008, Linux
Reading a newsgroup messages cause these messages to be displayed:
Gdk-CRITICAL **: file gdkpixmap.c: line 822 (gdk_pixmap_unref): assertion
`pixmap != NULL' failed.
Gdk-CRITICAL **: file gdkpixmap.c: line 63 (gdk_pixmap_new): assertion `(width
!= 0) && (height != 0)' failed.
Gdk-CRITICAL **: file gdkdraw.c: line 89 (gdk_draw_rectangle): assertion
`drawable != NULL' failed.
Comment 1•23 years ago
|
||
This is most likely a libpr0n problem.
Over to imagelib.
Assignee: sspitzer → pavlov
Status: UNCONFIRMED → NEW
Component: Mail Window Front End → ImageLib
Ever confirmed: true
Product: MailNews → Browser
QA Contact: esther → tpreston
Comment 2•23 years ago
|
||
Also appears when changing locale on the browser.
Comment 3•23 years ago
|
||
Same assertions, same line numbers when reading E-mail with build ID 2001081410
on Solaris/SPARC.
i see these in mailnews, and in sidebar and prefs, for instance, when clicking a
dropdown box. (for instance navigator/languages/default character coding)
They're "everywhere".
Comment 6•23 years ago
|
||
This also shows up in the browser itself when scrolling with the mouse wheel.
Same assertions.
Comment 7•23 years ago
|
||
We need to find out the exact date this regression occured.
I am thinking it was near the 0.9.3 release...
Comment 10•23 years ago
|
||
Using Mozilla/5.0 (X11; U; Linux i686; en-US; rv:0.9.3+) Gecko/2001081715,
Such Gdk-CRITICAL errors occur only with the classic theme:
- draging quickly the main horizontal and vertical scrollbar with the mouse.
- scrollling with the keyboard
- draging the sidebar vertical bar that enables to modify its horizontal extent
- overlaping a mozilla window with another mozilla one (overlap with a non
mozilla one seem ok)
- loading a new URL
- Shift-reload
- extending the window size (not diminuishing it)
- so it could be every event that repaint the browsed window.
Error that occurs with the classic, modern and toy factory theme:
Steps to always reproduce:
- start mozilla
- load www.mozilla.org
- CTRL-G
- pop-up "the text you entered was not found"
then Gdk message errors occur
(but it occurs only the first time you tape CTRL-G)
(btw: I couldn't find a bug on thefact that if the search text is empty, and
trying Find again, the Dialog message is "the text you entered was not found"
instead of "You have not entered a text to search.")
Should be > classic and title changed.
Reporter | ||
Comment 11•23 years ago
|
||
With the 2001081514 build (Linux) i can easily trigger
these messages by simply reading a news message. I am
using the modern theme so this is not specific to classic.
Comment 12•23 years ago
|
||
I can trigger them too in the newsgroup (installation from scratch).
The differences in the classic/modern theme behaviour concern at least the browser.
So I suggest someone should confirm and file a bug on these.
Assignee | ||
Comment 13•23 years ago
|
||
just add an if (width == 0 || height == 0) return NS_OK;
There are a bunch of dups of this i think.. I'll post a patch tomorrow.
Comment 14•23 years ago
|
||
*** Bug 95845 has been marked as a duplicate of this bug. ***
Comment 15•23 years ago
|
||
From bug 95845:
This assertion also displays on the console when scrolling down scroll bar from
the folder pane of the Mail...
Comment 16•23 years ago
|
||
other actions that triggers it:
-scroll an icon into sight in 3-pane folder-pane
-change focus from browser back to mailnews
strangely, if i have two browser windows open, it is only when changing focus
between the *first* instance of a browser-window and back to mailnews that
triggers the error.
Comment 17•23 years ago
|
||
*** Bug 97289 has been marked as a duplicate of this bug. ***
Assignee | ||
Comment 18•23 years ago
|
||
Comment 19•23 years ago
|
||
I still see errors with this patch.
Assignee | ||
Updated•23 years ago
|
Attachment #47710 -
Attachment is obsolete: true
Assignee | ||
Comment 20•23 years ago
|
||
Assignee | ||
Updated•23 years ago
|
Attachment #48048 -
Attachment description: real fix → almost real fix
Attachment #48048 -
Attachment is obsolete: true
Assignee | ||
Comment 21•23 years ago
|
||
Comment 23•23 years ago
|
||
Comment 24•23 years ago
|
||
sr=hyatt
Assignee | ||
Updated•23 years ago
|
Attachment #48050 -
Attachment is obsolete: true
Assignee | ||
Updated•23 years ago
|
Attachment #48049 -
Flags: superreview+
Assignee | ||
Updated•23 years ago
|
Attachment #48050 -
Attachment is obsolete: false
Assignee | ||
Comment 25•23 years ago
|
||
Comment on attachment 48050 [details] [diff] [review]
New patch, incl. slight enhancements and port to Xlib port
This can be checked in for 0.9.5.
Comment 26•23 years ago
|
||
pavlov:
I disagree with you.
the comment "I do not like Xlib toolkit" is _NO_ reason to reject the Xlib
patch!
Comment 27•23 years ago
|
||
Comment on attachment 48049 [details] [diff] [review]
real fix
r=bryner
Attachment #48049 -
Flags: review+
Assignee | ||
Comment 28•23 years ago
|
||
the xlib fix is not critical for 0.9.4.
It can be checked in once the tree branches for 0.9.5.
Comment 29•23 years ago
|
||
a=asa
Assignee | ||
Updated•23 years ago
|
Attachment #48049 -
Flags: approval+
Assignee | ||
Comment 30•23 years ago
|
||
Comment on attachment 48049 [details] [diff] [review]
real fix
checked in
Comment 31•23 years ago
|
||
I am still getting _sporadic_ Gdk-Critical asserts while scrolling pages with
many images (try
http://de.search.yahoo.com/search/photos_de?p={foto}&nice=foto&z=date&n=200).
pavlov:
Thanks for banning me ("*** Closing Link: gisburn[gk1616@255.255.255.255]
(Banned)") while reporting this issue to you. THANKS! ;-(
Assignee | ||
Comment 32•23 years ago
|
||
I'm glad you were very specific as to which gdk-critical errors you are
receiving.
Comment 33•23 years ago
|
||
Roland, are you still seeing this?
Assignee | ||
Comment 34•23 years ago
|
||
marking fixed
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•