fixing the annoying GDK-CRITICAL asserts on linux. bug 95160.  r=bryner sr=hyatt a=asa