gfx/src/gtk/nsRenderingContextGTK.h
@@ -42,10 +42,6 @@
 
 #include <gtk/gtk.h>
 
-#define USE_NATIVE_TILING 1
-
-
-
 class nsFontGTK;
 
 class nsRenderingContextGTK : public nsRenderingContextImpl
@@ -163,12 +159,6 @@ public:
                        nscoord aWidth, nscoord aHeight); 
   NS_IMETHOD DrawImage(nsIImage *aImage, const nsRect& aRect);
   NS_IMETHOD DrawImage(nsIImage *aImage, const nsRect& aSRect, const nsRect& aDRect);
-#ifdef USE_NATIVE_TILING
-  NS_IMETHOD DrawTile(nsIImage *aImage,nscoord aX0,nscoord aY0,nscoord aX1,nscoord aY1,
-                      nscoord aWidth, nscoord aHeight);
-  NS_IMETHOD DrawTile(nsIImage *aImage, nscoord aSrcXOffset,
-                      nscoord aSrcYOffset, const nsRect &aTileRect);
-#endif
   NS_IMETHOD CopyOffScreenBits(nsDrawingSurface aSrcSurf, PRInt32 aSrcX, PRInt32 aSrcY,
                                const nsRect &aDestBounds, PRUint32 aCopyFlags);
   NS_IMETHOD RetrieveCurrentNativeGraphicData(PRUint32 * ngd);
